Ignore secret_settings.pyc

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Secret Django Things #
 ########################
 secret_settings.py
+secret_settings.pyc
 
 # OS generated files #
 ######################
