Removed /media/ from tracking, moved database settings to secret_settings.py

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@ secret_settings.pyc
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# Media and Databases #
+######################
+*.sqlite3
+/media/
+/media/*
