--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-bleach==1.4.2
 Django==1.8
+Markdown==2.6.5
+Pillow==3.1.1
+Unipath==1.1
+Whoosh==2.7.2
+argparse==1.2.1
+bleach==1.4.2
 django-allauth==0.25.2
 django-ckeditor==5.0.3
 django-crispy-forms==1.6.0
@@ -20,10 +25,8 @@ easy-thumbnails==2.3
 html2text==2016.4.2
 html5lib==0.9999999
 jsonfield==1.0.3
-Markdown==2.6.5
 mbutil==0.2.0
 oauthlib==1.1.1
-Pillow==3.1.1
 psycopg2==2.6.1
 python-dateutil==2.5.0
 python-memcached==1.57
@@ -33,4 +36,4 @@ requests==2.9.1
 requests-oauthlib==0.6.1
 six==1.10.0
 sqlparse==0.1.19
-Whoosh==2.7.2
+wsgiref==0.1.2
