--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ django-geojson==2.8.1
 django-grappelli==2.7.3
 django-haystack==2.4.1
 django-leaflet==0.18.0
+django-post-office==2.0.7
 django-taggit==0.18.0
 djangorestframework==3.3.2
 djangorestframework-gis==0.10.1
