--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Whoosh==2.7.2
 argparse==1.2.1
 bleach==1.4.2
 django-allauth==0.25.2
+django-analytical==2.2.1
 django-autocomplete-light==3.1.6
 django-ckeditor==5.0.3
 django-crispy-forms==1.6.0
