--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ django-filter==0.12.0
 django-geojson==2.8.1
 django-grappelli==2.7.3
 django-haystack==2.4.1
+django-honeypot==0.5.0
 django-leaflet==0.18.0
 django-post-office==2.0.7
 django-taggit==0.18.0
