--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ django-appconf==1.0.2
 django-autocomplete-light==3.1.6
 django-celery-email==1.1.5
 django-ckeditor==5.0.3
+django-cors-headers==2.0.0
 django-crispy-forms==1.6.0
 django-dbbackup==2.5.0
 django-debug-toolbar==1.4
